@@ -4,20 +4,12 @@ plugins {
 }
 
 group = "github.renderbr.hytale"
-version = "0.3.1"
+version = "0.4.0"
 
 java {
     toolchain {
         languageVersion.set(JavaLanguageVersion.of(25))
     }
-}
-
-tasks.withType<JavaCompile> {
-    options.compilerArgs.add("--enable-preview")
-}
-
-tasks.withType<Test> {
-    jvmArgs("--enable-preview")
 }
 
 repositories {
@@ -31,7 +23,7 @@ dependencies {
     testImplementation(platform("org.junit:junit-bom:5.10.0"))
     testImplementation("org.junit.jupiter:junit-jupiter")
     testRuntimeOnly("org.junit.platform:junit-platform-launcher")
-    compileOnly("com.hypixel.hytale:Server:2026.02.06-aa1b071c2")
+    compileOnly("com.hypixel.hytale:Server:2026.02.19-1a311a592")
 
     implementation(files("libs/AverageHytaleCore.jar"))
     implementation("net.dv8tion:JDA:6.3.0") {
@@ -51,41 +43,9 @@ tasks.test {
 }
 
 tasks.shadowJar {
-    minimize {
-        exclude(dependency("github.renderbr.hytale.models.log:.*"))
-    }
     mergeServiceFiles()
-    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
-
-    archiveClassifier.set("all")
+    duplicatesStrategy = DuplicatesStrategy.INCLUDE
     isZip64 = true
-
-    exclude("META-INF/*.SF")
-    exclude("META-INF/*.DSA")
-    exclude("META-INF/*.RSA")
-    exclude("META-INF/maven/**")
-    exclude("META-INF/DEPENDENCIES")
-    exclude("**/LICENSE*", "**/NOTICE*", "README*", "*.txt", "*.md")
-    exclude("**/*.kotlin_metadata")
-    exclude("**/*.kotlin_module")
-    exclude("**/*.kotlin_builtins")
-    exclude("**/java.sql.Driver")
-    exclude("META-INF/services/com.fasterxml.jackson.core.*")
-    exclude("META-INF/proguard/**")
-    exclude("META-INF/versions/**")
-    exclude("org/jetbrains/annotations/**")
-    exclude("org/intellij/lang/annotations/**")
-
-
-    exclude(
-        "**/win32-x86/**",
-        "**/linux-x86/**",
-        "**/darwin-x86/**",
-        "**/module-info.class",
-        "libsqlite3.wasm",
-        "**/io/roastedroot/**",
-        "**/com/j256/**"
-    )
 
     relocate("org.slf4j", "github.renderbr.hytale.shadow.slf4j")
 }
